--- a/notebooks/Ising_model_vGPU.ipynb
+++ b/notebooks/Ising_model_vGPU.ipynb
@@ -267,6 +267,137 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## New laplacian code"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[ 4. -1.  0. -1.  0.  0.  0.  0.  0.]\n",
+            " [-1.  4. -1.  0. -1.  0.  0.  0.  0.]\n",
+            " [ 0. -1.  4.  0.  0. -1.  0.  0.  0.]\n",
+            " [-1.  0.  0.  4. -1.  0. -1.  0.  0.]\n",
+            " [ 0. -1.  0. -1.  4. -1.  0. -1.  0.]\n",
+            " [ 0.  0. -1.  0. -1.  4.  0.  0. -1.]\n",
+            " [ 0.  0.  0. -1.  0.  0.  4. -1.  0.]\n",
+            " [ 0.  0.  0.  0. -1.  0. -1.  4. -1.]\n",
+            " [ 0.  0.  0.  0.  0. -1.  0. -1.  4.]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "from scipy.sparse import lil_matrix\n",
+        "\n",
+        "def create_laplacian_matrix(n):\n",
+        "    # Total number of grid points\n",
+        "    total_points = n * n\n",
+        "    \n",
+        "    # Create a lil_matrix (List of Lists format) for efficient construction\n",
+        "    laplacian = lil_matrix((total_points, total_points))\n",
+        "    \n",
+        "    # Fill the matrix based on finite difference method for Laplacian\n",
+        "    for i in range(n):\n",
+        "        for j in range(n):\n",
+        "            row = i * n + j  # Current grid point\n",
+        "            \n",
+        "            # Diagonal element\n",
+        "            laplacian[row, row] = 4\n",
+        "            \n",
+        "            # Check and update neighbors (left, right, up, down)\n",
+        "            if i > 0:\n",
+        "                laplacian[row, (i - 1) * n + j] = -1  # Up\n",
+        "            if i < n - 1:\n",
+        "                laplacian[row, (i + 1) * n + j] = -1  # Down\n",
+        "            if j > 0:\n",
+        "                laplacian[row, i * n + (j - 1)] = -1  # Left\n",
+        "            if j < n - 1:\n",
+        "                laplacian[row, i * n + (j + 1)] = -1  # Right\n",
+        "    \n",
+        "    # Convert to CSR format for efficient arithmetic operations\n",
+        "    laplacian = laplacian.tocsr()\n",
+        "    \n",
+        "    return laplacian\n",
+        "\n",
+        "# Example usage\n",
+        "grid_size = 3  # Change this value to adjust the grid size\n",
+        "laplacian_matrix = create_laplacian_matrix(grid_size)\n",
+        "print(laplacian_matrix.toarray())  # Print the dense representation for visualization"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Old laplacian code"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[-4.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
+            "        [ 1., -4.,  1.,  0.,  1.,  0.,  0.,  0.,  0.],\n",
+            "        [ 0.,  1., -4.,  0.,  0.,  1.,  0.,  0.,  0.],\n",
+            "        [ 1.,  0.,  0., -4.,  1.,  0.,  1.,  0.,  0.],\n",
+            "        [ 0.,  1.,  0.,  1., -4.,  1.,  0.,  1.,  0.],\n",
+            "        [ 0.,  0.,  1.,  0.,  1., -4.,  0.,  0.,  1.],\n",
+            "        [ 0.,  0.,  0.,  1.,  0.,  0., -4.,  1.,  0.],\n",
+            "        [ 0.,  0.,  0.,  0.,  1.,  0.,  1., -4.,  1.],\n",
+            "        [ 0.,  0.,  0.,  0.,  0.,  1.,  0.,  1., -4.]])\n"
+          ]
+        }
+      ],
+      "source": [
+        "import torch.sparse as sp\n",
+        "dh=1.0\n",
+        "dh = torch.tensor(dh, device='cuda')\n",
+        "\n",
+        "def laplacian(Ng):\n",
+        "    # Constants\n",
+        "    h=dh\n",
+        "\n",
+        "    e = torch.ones(Ng**2, dtype=torch.float32)\n",
+        "\n",
+        "    # Create e2 using PyTorch\n",
+        "    e2 = (torch.tensor([1] * (Ng - 1) + [0], dtype=torch.float32).repeat(Ng)).type(torch.float32)\n",
+        "\n",
+        "    # Create e3 using PyTorch\n",
+        "    e3 = (torch.tensor([0] + [1] * (Ng - 1), dtype=torch.float32).repeat(Ng)).type(torch.float32)\n",
+        "    size = (Ng*Ng, Ng*Ng)\n",
+        "\n",
+        "    # Create the sparse diagonal matrix\n",
+        "    diagonals = torch.stack([-4 * e, e2, e3, e, e], dim=0)\n",
+        "    offsets = torch.tensor([0, -1, 1, -Ng, Ng], dtype=torch.int64)\n",
+        "    shape = (Ng**2, Ng**2)\n",
+        "    A = sp.spdiags(diagonals, offsets, shape)\n",
+        "\n",
+        "    A /= h.item()**2\n",
+        "\n",
+        "    #print(\"Sparse diagonal matrix:\")\n",
+        "    return A\n",
+        "\n",
+        "# Example usage\n",
+        "grid_size = 3  # Change this value to adjust the grid size\n",
+        "laplacian_matrix = laplacian(grid_size)\n",
+        "print(laplacian_matrix.to_dense())  # Print the dense representation for visualization"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dKMP6BShVEP6"
       },
