integrate new lagragian into codebase

--- a/notebooks/Ising_model_vGPU.ipynb
+++ b/notebooks/Ising_model_vGPU.ipynb
@@ -274,34 +274,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[ 4. -1.  0. -1.  0.  0.  0.  0.  0.]\n",
-            " [-1.  4. -1.  0. -1.  0.  0.  0.  0.]\n",
-            " [ 0. -1.  4.  0.  0. -1.  0.  0.  0.]\n",
-            " [-1.  0.  0.  4. -1.  0. -1.  0.  0.]\n",
-            " [ 0. -1.  0. -1.  4. -1.  0. -1.  0.]\n",
-            " [ 0.  0. -1.  0. -1.  4.  0.  0. -1.]\n",
-            " [ 0.  0.  0. -1.  0.  0.  4. -1.  0.]\n",
-            " [ 0.  0.  0.  0. -1.  0. -1.  4. -1.]\n",
-            " [ 0.  0.  0.  0.  0. -1.  0. -1.  4.]]\n"
+            "tensor([[-4.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
+            "        [ 1., -4.,  1.,  0.,  1.,  0.,  0.,  0.,  0.],\n",
+            "        [ 0.,  1., -4.,  0.,  0.,  1.,  0.,  0.,  0.],\n",
+            "        [ 1.,  0.,  0., -4.,  1.,  0.,  1.,  0.,  0.],\n",
+            "        [ 0.,  1.,  0.,  1., -4.,  1.,  0.,  1.,  0.],\n",
+            "        [ 0.,  0.,  1.,  0.,  1., -4.,  0.,  0.,  1.],\n",
+            "        [ 0.,  0.,  0.,  1.,  0.,  0., -4.,  1.,  0.],\n",
+            "        [ 0.,  0.,  0.,  0.,  1.,  0.,  1., -4.,  1.],\n",
+            "        [ 0.,  0.,  0.,  0.,  0.,  1.,  0.,  1., -4.]])\n"
           ]
         }
       ],
       "source": [
         "import numpy as np\n",
         "from scipy.sparse import lil_matrix\n",
+        "import torch\n",
         "\n",
         "def create_laplacian_matrix(n):\n",
         "    # Total number of grid points\n",
         "    total_points = n * n\n",
-        "    \n",
-        "    # Create a lil_matrix (List of Lists format) for efficient construction\n",
+        "\n",
         "    laplacian = lil_matrix((total_points, total_points))\n",
         "    \n",
         "    # Fill the matrix based on finite difference method for Laplacian\n",
@@ -323,14 +323,36 @@
         "                laplacian[row, i * n + (j + 1)] = -1  # Right\n",
         "    \n",
         "    # Convert to CSR format for efficient arithmetic operations\n",
-        "    laplacian = laplacian.tocsr()\n",
         "    \n",
-        "    return laplacian\n",
+        "    laplacian = laplacian.tocsr()\n",
+        "    laplacian = -laplacian\n",
+        "\n",
+        "    # Extract coordinates and values\n",
+        "    row_indices = []\n",
+        "    col_indices = []\n",
+        "    values = []\n",
+        "\n",
+        "    for row in range(laplacian.shape[0]):\n",
+        "        start = laplacian.indptr[row]\n",
+        "        end = laplacian.indptr[row + 1]\n",
+        "        row_indices.extend([row] * (end - start))\n",
+        "        col_indices.extend(laplacian.indices[start:end])\n",
+        "        values.extend(laplacian.data[start:end])\n",
+        "    \n",
+        "    # convert to coo_matrix\n",
+        "    coo_matrix = torch.sparse_coo_tensor(\n",
+        "        torch.tensor([row_indices, col_indices], dtype=torch.int64),\n",
+        "        torch.tensor(values, dtype=torch.float32),\n",
+        "        torch.Size((n*n,n*n))\n",
+        "    )\n",
+        "\n",
+        "    return coo_matrix\n",
         "\n",
         "# Example usage\n",
         "grid_size = 3  # Change this value to adjust the grid size\n",
         "laplacian_matrix = create_laplacian_matrix(grid_size)\n",
-        "print(laplacian_matrix.toarray())  # Print the dense representation for visualization"
+        "\n",
+        "print(laplacian_matrix.to_dense())  # Print the dense representation for visualization"
       ]
     },
     {
@@ -342,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 89,
       "metadata": {},
       "outputs": [
         {
@@ -407,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 90,
       "metadata": {
         "id": "UTrVkbBKT7_5"
       },
@@ -418,6 +440,7 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import torch.sparse as sp\n",
+        "from scipy.sparse import lil_matrix\n",
         "import torch\n",
         "import json\n",
         "\n",
@@ -439,29 +462,79 @@
         "master_list = []\n",
         "\n",
         "\n",
-        "def laplacian(Ng):\n",
-        "    # Constants\n",
-        "    h=dh\n",
+        "def laplacian(n):\n",
+        "    # Total number of grid points\n",
+        "    total_points = n * n\n",
         "\n",
-        "    e = torch.ones(Ng**2, dtype=torch.float32)\n",
+        "    laplacian = lil_matrix((total_points, total_points))\n",
+        "    \n",
+        "    # Fill the matrix based on finite difference method for Laplacian\n",
+        "    for i in range(n):\n",
+        "        for j in range(n):\n",
+        "            row = i * n + j  # Current grid point\n",
+        "            \n",
+        "            # Diagonal element\n",
+        "            laplacian[row, row] = 4\n",
+        "            \n",
+        "            # Check and update neighbors (left, right, up, down)\n",
+        "            if i > 0:\n",
+        "                laplacian[row, (i - 1) * n + j] = -1  # Up\n",
+        "            if i < n - 1:\n",
+        "                laplacian[row, (i + 1) * n + j] = -1  # Down\n",
+        "            if j > 0:\n",
+        "                laplacian[row, i * n + (j - 1)] = -1  # Left\n",
+        "            if j < n - 1:\n",
+        "                laplacian[row, i * n + (j + 1)] = -1  # Right\n",
+        "    \n",
+        "    # Convert to CSR format for efficient arithmetic operations\n",
+        "    \n",
+        "    laplacian = laplacian.tocsr()\n",
+        "    laplacian = -laplacian\n",
         "\n",
-        "    # Create e2 using PyTorch\n",
-        "    e2 = (torch.tensor([1] * (Ng - 1) + [0], dtype=torch.float32).repeat(Ng)).type(torch.float32)\n",
+        "    # Extract coordinates and values\n",
+        "    row_indices = []\n",
+        "    col_indices = []\n",
+        "    values = []\n",
         "\n",
-        "    # Create e3 using PyTorch\n",
-        "    e3 = (torch.tensor([0] + [1] * (Ng - 1), dtype=torch.float32).repeat(Ng)).type(torch.float32)\n",
-        "    size = (Ng*Ng, Ng*Ng)\n",
+        "    for row in range(laplacian.shape[0]):\n",
+        "        start = laplacian.indptr[row]\n",
+        "        end = laplacian.indptr[row + 1]\n",
+        "        row_indices.extend([row] * (end - start))\n",
+        "        col_indices.extend(laplacian.indices[start:end])\n",
+        "        values.extend(laplacian.data[start:end])\n",
+        "    \n",
+        "    # convert to coo_matrix\n",
+        "    coo_matrix = torch.sparse_coo_tensor(\n",
+        "        torch.tensor([row_indices, col_indices], dtype=torch.int64),\n",
+        "        torch.tensor(values, dtype=torch.float32),\n",
+        "        torch.Size((n*n,n*n))\n",
+        "    )\n",
         "\n",
-        "    # Create the sparse diagonal matrix\n",
-        "    diagonals = torch.stack([-4 * e, e2, e3, e, e], dim=0)\n",
-        "    offsets = torch.tensor([0, -1, 1, -Ng, Ng], dtype=torch.int64)\n",
-        "    shape = (Ng**2, Ng**2)\n",
-        "    A = sp.spdiags(diagonals, offsets, shape)\n",
+        "    return coo_matrix\n",
         "\n",
-        "    A /= h.item()**2\n",
+        "# def laplacian(Ng):\n",
+        "#     # Constants\n",
+        "#     h=dh\n",
         "\n",
-        "    #print(\"Sparse diagonal matrix:\")\n",
-        "    return A\n",
+        "#     e = torch.ones(Ng**2, dtype=torch.float32)\n",
+        "\n",
+        "#     # Create e2 using PyTorch\n",
+        "#     e2 = (torch.tensor([1] * (Ng - 1) + [0], dtype=torch.float32).repeat(Ng)).type(torch.float32)\n",
+        "\n",
+        "#     # Create e3 using PyTorch\n",
+        "#     e3 = (torch.tensor([0] + [1] * (Ng - 1), dtype=torch.float32).repeat(Ng)).type(torch.float32)\n",
+        "#     size = (Ng*Ng, Ng*Ng)\n",
+        "\n",
+        "#     # Create the sparse diagonal matrix\n",
+        "#     diagonals = torch.stack([-4 * e, e2, e3, e, e], dim=0)\n",
+        "#     offsets = torch.tensor([0, -1, 1, -Ng, Ng], dtype=torch.int64)\n",
+        "#     shape = (Ng**2, Ng**2)\n",
+        "#     A = sp.spdiags(diagonals, offsets, shape)\n",
+        "\n",
+        "#     A /= h.item()**2\n",
+        "\n",
+        "#     #print(\"Sparse diagonal matrix:\")\n",
+        "#     return A\n",
         "\n",
         "def integrate(L, x, y, u):\n",
         "    '''  simulates the equation and plots it at different instants '''\n",
