add 3d viz of configurations

--- a/notebooks/Ising_model_vGPU.ipynb
+++ b/notebooks/Ising_model_vGPU.ipynb
@@ -420,6 +420,74 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3D laplacian"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[ 6. -1.  0. ...  0.  0.  0.]\n",
+            " [-1.  6. -1. ...  0.  0.  0.]\n",
+            " [ 0. -1.  6. ...  0.  0.  0.]\n",
+            " ...\n",
+            " [ 0.  0.  0. ...  6. -1.  0.]\n",
+            " [ 0.  0.  0. ... -1.  6. -1.]\n",
+            " [ 0.  0.  0. ...  0. -1.  6.]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "from scipy.sparse import lil_matrix\n",
+        "\n",
+        "def create_3d_laplacian_matrix(n):\n",
+        "    total_points = n * n * n  # Total number of grid points\n",
+        "    \n",
+        "    laplacian = lil_matrix((total_points, total_points))\n",
+        "    \n",
+        "    for i in range(n):\n",
+        "        for j in range(n):\n",
+        "            for k in range(n):\n",
+        "                row = i * n * n + j * n + k  # Current grid point\n",
+        "                \n",
+        "                # Diagonal element\n",
+        "                laplacian[row, row] = 6\n",
+        "                \n",
+        "                # Check and update neighbors (left, right, up, down, front, back)\n",
+        "                if i > 0:\n",
+        "                    laplacian[row, ((i - 1) * n + j) * n + k] = -1  # Left\n",
+        "                if i < n - 1:\n",
+        "                    laplacian[row, ((i + 1) * n + j) * n + k] = -1  # Right\n",
+        "                if j > 0:\n",
+        "                    laplacian[row, (i * n + (j - 1)) * n + k] = -1  # Down\n",
+        "                if j < n - 1:\n",
+        "                    laplacian[row, (i * n + (j + 1)) * n + k] = -1  # Up\n",
+        "                if k > 0:\n",
+        "                    laplacian[row, (i * n + j) * n + (k - 1)] = -1  # Back\n",
+        "                if k < n - 1:\n",
+        "                    laplacian[row, (i * n + j) * n + (k + 1)] = -1  # Front\n",
+        "    \n",
+        "    # Convert to CSR format for efficient arithmetic operations\n",
+        "    laplacian = laplacian.tocsr()\n",
+        "    \n",
+        "    return laplacian\n",
+        "\n",
+        "# Example usage\n",
+        "grid_size = 4  # Change this value to adjust the grid size\n",
+        "laplacian_matrix = create_3d_laplacian_matrix(grid_size)\n",
+        "print(laplacian_matrix.toarray())  # Print the dense representation for visualization"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dKMP6BShVEP6"
       },
