update 3d langevin equation

--- a/notebooks/miller/2d_langevin.ipynb
+++ b/notebooks/miller/2d_langevin.ipynb
@@ -123,7 +123,7 @@
         "# Simulating the TDGL equation\n",
         "a, b, k = 1.0, 1.0, 100.0 #configuração: (a<0, b>0) ou (a>0, b>0)\n",
         "dh, dt = 1.0, 1e-3\n",
-        "Ng, Tf = 4, 10001\n",
+        "Ng, Tf = 50, 10001\n",
         "\n",
         "a = torch.tensor(a, device='cpu')\n",
         "b = torch.tensor(b, device='cpu')\n",
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -233,7 +233,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "d:\\Anaconda\\Anaconda\\Lib\\site-packages\\torch\\functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\aten\\src\\ATen\\native\\TensorShape.cpp:3484.)\n",
+            "c:\\Users\\mille\\Documents\\CloneGit\\ising-models\\venv\\lib\\site-packages\\torch\\functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:3527.)\n",
             "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
           ]
         },
@@ -255,6 +255,11 @@
         "## define o dispositivo cuda a ser utilizado\n",
         "\n",
         "device = torch.device('cpu')\n",
+        "\n",
+        "\n",
+        "x = torch.linspace(-1, 1, Ng)\n",
+        "y = torch.linspace(-1, 1, Ng)\n",
+        "X, Y = torch.meshgrid(x, y)\n",
         "\n",
         "## simula 100 configurações finais com os parametros iniciais\n",
         "\n",
@@ -359,7 +364,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.9.12"
     }
   },
   "nbformat": 4,
