--- a/notebooks/miller/2d_langevin.ipynb
+++ b/notebooks/miller/2d_langevin.ipynb
@@ -123,7 +123,7 @@
         "# Simulating the TDGL equation\n",
         "a, b, k = -1.0, 1.0, 100.0 #configuração: (a<0, b>0) ou (a>0, b>0)\n",
         "dh, dt = 1.0, 1e-3\n",
-        "Ng, Tf = 64, 10001\n",
+        "Ng, Tf = 50, 10001\n",
         "\n",
         "a = torch.tensor(a, device='cpu')\n",
         "b = torch.tensor(b, device='cpu')\n",
@@ -230,6 +230,14 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\mille\\Documents\\CloneGit\\ising-models\\venv\\lib\\site-packages\\torch\\functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:3527.)\n",
+            "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
@@ -247,6 +255,11 @@
         "## define o dispositivo cuda a ser utilizado\n",
         "\n",
         "device = torch.device('cpu')\n",
+        "\n",
+        "\n",
+        "x = torch.linspace(-1, 1, Ng)\n",
+        "y = torch.linspace(-1, 1, Ng)\n",
+        "X, Y = torch.meshgrid(x, y)\n",
         "\n",
         "## simula 100 configurações finais com os parametros iniciais\n",
         "\n",
@@ -376,60 +389,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[tensor([[-0.0420],\n",
-              "         [-0.0271],\n",
-              "         [-0.0205],\n",
-              "         ...,\n",
-              "         [-0.0222],\n",
-              "         [-0.0017],\n",
-              "         [-0.0151]]),\n",
-              " tensor([[ 0.0303],\n",
-              "         [ 0.0255],\n",
-              "         [-0.0417],\n",
-              "         ...,\n",
-              "         [ 0.0133],\n",
-              "         [-0.0005],\n",
-              "         [ 0.0181]]),\n",
-              " tensor([[ 0.0037],\n",
-              "         [ 0.0182],\n",
-              "         [ 0.0240],\n",
-              "         ...,\n",
-              "         [-0.0023],\n",
-              "         [ 0.0078],\n",
-              "         [-0.0222]]),\n",
-              " tensor([[-0.0061],\n",
-              "         [-0.0049],\n",
-              "         [ 0.0062],\n",
-              "         ...,\n",
-              "         [ 0.0200],\n",
-              "         [-0.0169],\n",
-              "         [-0.0069]]),\n",
-              " tensor([[-0.0010],\n",
-              "         [-0.0194],\n",
-              "         [-0.0060],\n",
-              "         ...,\n",
-              "         [ 0.0504],\n",
-              "         [-0.0015],\n",
-              "         [-0.0194]])]"
-            ]
-          },
-          "execution_count": 17,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "master_list"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
@@ -456,7 +415,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.9.12"
     }
   },
   "nbformat": 4,
