time evolution in langevin equation

--- a/notebooks/jonas/2d_langevin_damping_v2.ipynb
+++ b/notebooks/jonas/2d_langevin_damping_v2.ipynb
@@ -114,12 +114,12 @@
         "def integrate(L, u, T):\n",
         "    '''  simulates the equation and plots it at different instants '''\n",
         "    T = torch.tensor([T], device='cpu')\n",
-        "    for i,T in enumerate(range(Tf.item())):\n",
+        "    for t in range(Tf.item()):\n",
         "        noise = torch.normal(mean=0.0, std=1.0, size=(Ng * Ng, 1), device='cpu')\n",
         "        u = u - (dt/damping(T)) * (a * u + b * u * u * u - c - k * torch.mm(L, u)) + (torch.sqrt(2 * T * dt)/damping(T)) * noise  # Euler's method\n",
-        "        master_dict[i] = u\n",
-        "        if (i==10000):\n",
-        "            master_list.append(u)"
+        "        master_dict[t] = u\n",
+        "        # if (t==10000):\n",
+        "        #     master_list.append(u)"
       ]
     },
     {
