--- a/notebooks/jonas/2d_langevin_v5.ipynb
+++ b/notebooks/jonas/2d_langevin_v5.ipynb
@@ -88,14 +88,17 @@
         "    return coo_matrix\n",
         "\n",
         "master_list = []\n",
-        "def integrate(L, u, T):\n",
+        "master_dict = {}\n",
+        "listu = []\n",
+        "def integrate(L, u, T, tref):\n",
         "    '''  simulates the equation and plots it at different instants '''\n",
         "    T = torch.tensor([T], device='cpu')\n",
-        "    for i in range(Tf.item()):\n",
+        "    for t in range(Tf.item()):\n",
         "        noise = torch.normal(mean=0.0, std=1.0, size=(Ng * Ng, 1), device='cpu')\n",
         "        u = u - dt * (a * u + b * u * u * u - c - k * torch.mm(L, u)) + torch.sqrt(2 * T * dt) * noise  # Euler's method\n",
-        "        if (i==10000):\n",
-        "            master_list.append(u)"
+        "        if (t==tref):\n",
+        "            master_dict[tref] = listu.extend([u])\n",
+        "            # master_list.append(u)"
       ]
     },
     {
@@ -231,17 +234,19 @@
         "\n",
         "list_vev = []\n",
         "list_temperature = [0.01, 5]\n",
-        "for T in list_temperature:\n",
-        "  print(f\"---------------- Temperature: {T} --------------------- \")\n",
-        "  for realization in tqdm(range(N_real), desc=\"Processing\", ncols=100, ascii=True):\n",
-        "    u = torch.randn(Ng * Ng, 1, device=device)  # Initial data\n",
-        "    integrate(L, u, T)    # simulate\n",
-        "    # if realization % 10 ==0:\n",
-        "      # print(f'Realization: {realization}')\n",
+        "list_tref = np.linspace(1, 1000, num=100)\n",
+        "for tref in list_tref:\n",
+        "  for T in list_temperature:\n",
+        "    print(f\"---------------- Temperature: {T} --------------------- \")\n",
+        "    for realization in tqdm(range(N_real), desc=\"Processing\", ncols=100, ascii=True):\n",
+        "      u = torch.randn(Ng * Ng, 1, device=device)  # Initial data\n",
+        "      integrate(L, u, T, tref=tref)    # simulate\n",
+        "      # if realization % 10 ==0:\n",
+        "        # print(f'Realization: {realization}')\n",
         "\n",
-        "  mean_config = avg_realizations(master_list, Ng)\n",
-        "  VEV = avg_final(mean_config, Ng)\n",
-        "  list_vev.append(VEV)"
+        "    mean_config = avg_realizations(master_list, Ng)\n",
+        "    VEV = avg_final(mean_config, Ng)\n",
+        "    list_vev.append(VEV)"
       ]
     },
     {
